# bloger-bot

./: .env.example  .gitignore  AGENTS.md  Makefile  docker-compose.dev.yml
config/bloggers/: maria.yaml  yuri.yaml
config/onboarding/: yuri.yaml
docs/: API_REFERENCE.md  ARCHITECTURE.md  TASK.md
infrastructure/docker/grafana/provisioning/datasources/: prometheus.yml
infrastructure/docker/prometheus/: prometheus.yml
libs/common/: pyproject.toml
libs/common/src/common/: __init__.py  config.py  database.py
libs/common/src/common/models/: __init__.py  base.py  content.py  enums.py  user.py
migrations/: alembic.ini  env.py
migrations/versions/: a8a60c03fb9b_initial_tables.py  b1_user_sessions_onboarding.py  b2_add_yandex_disk_source_type.py  b3_add_youtube_instagram_sources.py
services/: Dockerfile
services/admin-service/: Dockerfile  pyproject.toml
services/admin-service/src/admin_service/: config.py  db.py  main.py  routes.py  views.py
services/admin-service/src/admin_service/templates/: base.html  dashboard.html  dialogues.html  users.html
services/ingestion-service/: Dockerfile  pyproject.toml
services/ingestion-service/src/ingestion_service/: config.py  main.py  telegram_client.py
services/ingestion-service/src/ingestion_service/api/: router.py
services/ingestion-service/src/ingestion_service/api/endpoints/: jobs.py  sources.py
services/ingestion-service/src/ingestion_service/parsers/: base.py  telegram.py
services/ingestion-service/src/ingestion_service/services/: job_manager.py
services/ingestion-service/src/ingestion_service/workers/: celery_app.py  tasks.py
services/llm-service/: Dockerfile  pyproject.toml
services/llm-service/src/llm_service/: config.py  main.py  rag.py
services/telegram-bot/: Dockerfile  pyproject.toml
services/telegram-bot/src/bot/: config.py  db.py  handlers.py  llm_client.py  main.py  onboarding.py
services/user-service/: Dockerfile  pyproject.toml
services/user-service/src/user_service/: config.py  db.py  main.py  routes.py
tests/: test_pipeline.py  test_rag.py
tools/: create_session.py  find_chat_id.py  ingest_common.py  ingest_instagram.py  ingest_instagram_browser.py  ingest_yandex_disk.py  ingest_youtube.py  instagram_playwright_list.py  instagram_refresh_cookies.py  youtube_extras.txt  youtube_refresh_cookies.py
tools/sync/: README_DRIVE.md  drive_sync_config.json  export_state.py  import_state.py  sync_from_drive.py  sync_to_drive.py
tools/transcriber/: pyproject.toml
tools/transcriber/src/transcriber/: cli.py  config.py  db_client.py  whisper_transcriber.py
