[project]
name = "bloger-common"
version = "0.1.0"
description = "Shared models, config, and DB utilities for Bloger Bot"
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "structlog>=24.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/common"]