[project]
name = "ingestion-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "pydantic-settings>=2.3",
    "celery[redis]>=5.4",
    "structlog>=24.1",
    "pyrogram>=2.0",
    "TgCrypto>=1.2",
    "aiofiles>=23.2",
    "openai>=1.30",
    "chromadb==0.5.23",
    "razdel>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ingestion_service"]