[project]
name = "bloger-transcriber"
version = "0.1.0"
description = "Local Whisper transcription tool for Bloger Bot"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.0",
    "click>=8.1",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["ruff"]

[project.scripts]
transcriber = "transcriber.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transcriber"]